Issue of z-index

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 .fix-nav{
-    z-index: 2;
+    z-index: 9999;
     transition: all .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     background: var(--contrast-color);
     height: 130px !important;
